--- a/.github/workflows/smoke-tests-os.yml
+++ b/.github/workflows/smoke-tests-os.yml
@@ -1,10 +1,12 @@
-name: smoke-tests
-run-name: Smoke Tests
+name: smoke-tests-os
+run-name: Smoke Tests OS
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 3 * * 1-5'
+  workflow_call:
+    inputs:
+      branch:
+        required: true
+        type: string
 
 # limit the access of the generated GITHUB_TOKEN
 permissions:
@@ -23,6 +25,9 @@ jobs:
       date: ${{ steps.generate.outputs.date }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.branch }}
+
       - name: Setup cluster env
         uses: ./.github/workflows/setup-cluster-env
         with:
@@ -34,36 +39,6 @@ jobs:
         run: |
           echo "tests=$(make smoketest/discover)" >> "${GITHUB_OUTPUT}"
           echo "date=$(date +%s)" >> "${GITHUB_OUTPUT}"
-
-  smoke-tests-ess:
-    name: Run smoke tests ${{ matrix.test }} for ${{ matrix.version }}
-    runs-on: ubuntu-latest
-    needs: prepare
-    env:
-      TF_VAR_BUILD_ID: ${{ github.run_id }}
-      TF_VAR_ENVIRONMENT: 'ci'
-      TF_VAR_BRANCH: ${{ github.ref_name }}
-      TF_VAR_REPO: ${{ github.repository }}
-      TF_VAR_CREATED_DATE: ${{ needs.prepare.outputs.date }}
-    strategy:
-      matrix:
-        test: ${{ fromJSON(needs.prepare.outputs.tests) }}
-        version:
-          - '7.17'
-          - 'latest'
-    steps:
-      - uses: actions/checkout@v3
-      - name: Setup cluster env
-        uses: ./.github/workflows/setup-cluster-env
-        with:
-          vault-url: ${{ secrets.VAULT_ADDR }}
-          vault-role-id: ${{ secrets.VAULT_ROLE_ID }}
-          vault-secret-id: ${{ secrets.VAULT_SECRET_ID }}
-      - name: Run smoke tests ${{ matrix.test }} for ${{ matrix.version }}
-        run: make smoketest/run-version TEST_DIR=${{ matrix.test }} SMOKETEST_VERSION=${{ matrix.version }}
-      - if: always()
-        name: Teardown smoke test infra
-        run: make smoketest/cleanup TEST_DIR=${{ matrix.test }}
 
   smoke-tests-os:
     name: Run smoke tests OS
@@ -77,6 +52,8 @@ jobs:
       TF_VAR_CREATED_DATE: ${{ needs.prepare.outputs.date }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.branch }}
       - name: Get version
         run: echo "VERSION=$(make get-version)" >> "${GITHUB_ENV}"
       - name: Setup cluster env
