ci: run on specific branches
Signed-off-by: Adrien Mannocci <adrien.mannocci@elastic.co>

--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -8,6 +8,8 @@ on:
       - ci
       - system-test-reporter
       - update-beats
+      - smoke-tests-os
+      - smoke-tests-ess
     types: [completed]
 
 jobs:
