--- a/.github/workflows/smoke-tests-schedule.yml
+++ b/.github/workflows/smoke-tests-schedule.yml
@@ -14,6 +14,8 @@ jobs:
   prepare-smoke-tests-os:
     name: Generate smoke tests list
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ github.token }}
     outputs:
       branches: ${{ steps.generate.outputs.branches }}
     steps:
