ci: add missing bash script
Signed-off-by: Adrien Mannocci <adrien.mannocci@elastic.co>

--- a/.github/workflows/generate-smoke-tests-list/action.yml
+++ b/.github/workflows/generate-smoke-tests-list/action.yml
@@ -35,3 +35,4 @@ runs:
       run: |
         echo "tests=$(make smoketest/discover)" >> "${GITHUB_OUTPUT}"
         echo "date=$(date +%s)" >> "${GITHUB_OUTPUT}"
+      shell: 'bash'
