--- a/.github/workflows/smoke-tests-schedule.yml
+++ b/.github/workflows/smoke-tests-schedule.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - id: generate
         name: Generate matrix
-        uses: elastic/apm-pipeline-library/.github/actions/elastic-stack-snapshot-branches@feature/exclude-branches
+        uses: elastic/apm-pipeline-library/.github/actions/elastic-stack-snapshot-branches@current
         with:
           exclude-branches: '7.17'
 
