--- a/systemtest/approvals/TestIntake/Spans.approved.json
+++ b/systemtest/approvals/TestIntake/Spans.approved.json
@@ -45,6 +45,17 @@
                 "outcome": "success",
                 "success_count": 1
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "http": {
                 "request": {
                     "method": "GET"
@@ -204,6 +215,17 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "labels": {
                 "tag1": "label1"
             },
@@ -221,7 +243,8 @@
             },
             "service": {
                 "environment": "staging",
-                "name": "backendspans"
+                "name": "backendspans",
+                "version": "5.1.3"
             },
             "span": {
                 "action": "call",
@@ -279,6 +302,17 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "labels": {
                 "tag1": "value1",
                 "tag4": "true"
@@ -301,7 +335,8 @@
             },
             "service": {
                 "environment": "staging",
-                "name": "backendspans"
+                "name": "backendspans",
+                "version": "5.1.3"
             },
             "span": {
                 "duration": {
@@ -360,6 +395,17 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "labels": {
                 "tag1": "label1"
             },
@@ -377,7 +423,8 @@
             },
             "service": {
                 "environment": "prod",
-                "name": "backendspans"
+                "name": "backendspans",
+                "version": "5.1.3"
             },
             "span": {
                 "duration": {
@@ -436,6 +483,17 @@
                 "outcome": "success",
                 "success_count": 1
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "labels": {
                 "tag1": "label1"
             },
@@ -453,7 +511,8 @@
             },
             "service": {
                 "environment": "staging",
-                "name": "backendspans"
+                "name": "backendspans",
+                "version": "5.1.3"
             },
             "span": {
                 "action": "query",
@@ -526,6 +585,17 @@
                 "ingested": "dynamic",
                 "outcome": "success",
                 "success_count": 1
+            },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
             },
             "http": {
                 "request": {
@@ -690,6 +760,17 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "labels": {
                 "tag1": "label1"
             },
@@ -707,7 +788,8 @@
             },
             "service": {
                 "environment": "staging",
-                "name": "backendspans"
+                "name": "backendspans",
+                "version": "5.1.3"
             },
             "span": {
                 "action": "receive",
@@ -782,6 +864,17 @@
                 "outcome": "success",
                 "success_count": 1
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "labels": {
                 "tag1": "label1"
             },
@@ -799,7 +892,8 @@
             },
             "service": {
                 "environment": "staging",
-                "name": "backendspans"
+                "name": "backendspans",
+                "version": "5.1.3"
             },
             "span": {
                 "action": "query.custom",
@@ -865,6 +959,17 @@
                 "outcome": "success",
                 "success_count": 1
             },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
+            },
             "labels": {
                 "tag1": "label1"
             },
@@ -886,7 +991,8 @@
                 "target": {
                     "name": "localhost:8080",
                     "type": ""
-                }
+                },
+                "version": "5.1.3"
             },
             "span": {
                 "action": "request",
@@ -959,6 +1065,17 @@
                 "ingested": "dynamic",
                 "outcome": "success",
                 "success_count": 1
+            },
+            "host": {
+                "architecture": "x64",
+                "hostname": "node-name",
+                "ip": [
+                    "127.0.0.1"
+                ],
+                "name": "node-name",
+                "os": {
+                    "platform": "darwin"
+                }
             },
             "http": {
                 "request": {
