--- a/systemtest/approvals/TestJaeger/batch_1.approved.json
+++ b/systemtest/approvals/TestJaeger/batch_1.approved.json
@@ -261,6 +261,13 @@
                 "outcome": "failure",
                 "success_count": 0
             },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
+            },
             "labels": {
                 "param_driverID": "T752547C"
             },
@@ -309,6 +316,13 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "unknown"
+            },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
             },
             "labels": {
                 "param_driverID": "T781861C"
@@ -359,6 +373,13 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
+            },
             "labels": {
                 "param_driverID": "T757338C"
             },
@@ -407,6 +428,13 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "unknown"
+            },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
             },
             "labels": {
                 "param_driverID": "T708771C"
@@ -458,6 +486,13 @@
                 "outcome": "failure",
                 "success_count": 0
             },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
+            },
             "labels": {
                 "param_driverID": "T762465C"
             },
@@ -506,6 +541,13 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "unknown"
+            },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
             },
             "labels": {
                 "param_driverID": "T710624C"
@@ -557,6 +599,13 @@
                 "outcome": "failure",
                 "success_count": 0
             },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
+            },
             "labels": {
                 "param_driverID": "T781861C"
             },
@@ -605,6 +654,13 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "unknown"
+            },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
             },
             "labels": {
                 "param_driverID": "T705860C"
@@ -655,6 +711,13 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
+            },
             "labels": {
                 "param_driverID": "T762465C"
             },
@@ -703,6 +766,13 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "unknown"
+            },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
             },
             "labels": {
                 "param_driverID": "T752547C"
@@ -753,6 +823,13 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
+            },
             "labels": {
                 "param_driverID": "T752110C"
             },
@@ -801,6 +878,13 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "unknown"
+            },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
             },
             "labels": {
                 "param_driverID": "T757670C"
@@ -851,6 +935,13 @@
                 "ingested": "dynamic",
                 "outcome": "unknown"
             },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
+            },
             "labels": {
                 "param_location": "728,326"
             },
@@ -899,6 +990,13 @@
                 "agent_id_status": "missing",
                 "ingested": "dynamic",
                 "outcome": "unknown"
+            },
+            "host": {
+                "hostname": "host01",
+                "ip": [
+                    "10.0.0.13"
+                ],
+                "name": "host01"
             },
             "labels": {
                 "param_driverID": "T712515C"
