test: add smoke testing for EA managed apm-server (#10637)
* test: add smoke testing for EA managed apm-server

* test: remove unnecessary touch command from provisioner

* test: set apm server log permission to 0777

apm-server is running as root so scp dose not have permissions to
retrieve the logs from the remote machine.
As a workaround, set the permissions to 0777

* test: keep apm-server logs name to avoid conflicts

* fix

* test: add aws instance dependency to null_resource

* test: rename null_resource for consistency

* build: update gitignore

* test: remove unnecessary touch command from provisioner

* test: move standalone apm server to a separate module and refactor smoke tests

* lint: fix formatting

* build: exclude ea managed smoke tests from top level makefile

* test: split supported os to a separate script and compact duplicate scripts

* test: remove duplicate unused files

* build: update exclusion rule for ea managed smoke tests

--- a/.gitignore
+++ b/.gitignore
@@ -45,9 +45,10 @@ terraform.tfvars
 testing/benchmark/.envrc
 testing/benchmark/benchmark-result.txt
 testing/smoke/**/tf.log
-testing/smoke/**/apm-server.log
+testing/smoke/**/apm-server-*.ndjson
 testing/smoke/**/provisioner_key*
 testing/smoke/**/main.tf
 !testing/smoke/main.tf
 !testing/smoke/supported-os/main.tf
+!testing/smoke/managed/main.tf
 testing/rally-cloud/build
