--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -7,6 +7,8 @@ on:
       - ci
       - system-test-reporter
       - update-beats
+      - smoke-tests-os
+      - smoke-tests-ess
     types: [completed]
 
 jobs:
