--- a/apm-server.docker.yml
+++ b/apm-server.docker.yml
@@ -208,6 +208,15 @@ apm-server:
     # and is required when working with Elastic Agent standalone or Fleet.
     # This will override credentials in output.elasticsearch configuration.
     #elasticsearch:
+      # Array of hosts to connect to.
+      # Scheme and port can be left out and will be set to the default (`http` and `9200`).
+      # In case you specify and additional path, the scheme is required: `http://localhost:9200/path`.
+      # IPv6 addresses should always be defined as: `https://[2001:db8::1]:9200`.
+      # hosts: ["localhost:9200"]
+
+      # Protocol - either `http` (default) or `https`.
+      #protocol: "https"
+
       # Authentication credentials - either API key or username/password.
       #api_key: "id:api_key"
       #username: "elastic"
