--- a/systemtest/approvals/TestIntake/MinimalEvents.approved.json
+++ b/systemtest/approvals/TestIntake/MinimalEvents.approved.json
@@ -210,6 +210,7 @@
                 },
                 "id": "0123456a89012345",
                 "name": "GET /api/types",
+                "representative_count": 1,
                 "type": "request"
             },
             "timestamp": {
@@ -259,6 +260,7 @@
                 },
                 "id": "0123456a89012345",
                 "name": "GET /api/types",
+                "representative_count": 1,
                 "type": "request"
             },
             "timestamp": {
