apmpackage: prepare for metrics change
Metrics produced by apm-server (apm-data)
will soon change. Update the ingest pipelines
to cater for this change. There is no change
to how metrics are indexed; the ingest pipeline
takes care of restructuring things.

--- a/apmpackage/apm/changelog.yml
+++ b/apmpackage/apm/changelog.yml
@@ -3,6 +3,9 @@
     - description: Placeholder
       type: enhancement
       link: https://github.com/elastic/apm-server/pull/123
+    - description: Handle `metricset.samples` from apm-server
+      type: enhancement
+      link: https://github.com/elastic/apm-server/pull/10794
 - version: "8.8.0"
   changes:
     - description: Store app logs into service-specific data streams
