--- a/apmpackage/apm/data_stream/app_metrics/elasticsearch/ingest_pipeline/default.yml
+++ b/apmpackage/apm/data_stream/app_metrics/elasticsearch/ingest_pipeline/default.yml
@@ -13,23 +13,5 @@ processors:
       name: process_ppid
   - pipeline:
       name: client_geoip
-  - script:
-      # TODO(axw) handle unit in metric descriptions.
-      # See https://github.com/elastic/elasticsearch/issues/72536
-      if: ctx._metric_descriptions != null
-      source: |
-        Map dynamic_templates = new HashMap();
-        for (entry in ctx._metric_descriptions.entrySet()) {
-          String name = entry.getKey();
-          Map description = entry.getValue();
-          String metric_type = description.type;
-          if (metric_type == "histogram") {
-            dynamic_templates[name] = "histogram";
-          } else if (metric_type == "summary") {
-            dynamic_templates[name] = "summary";
-          } else {
-            dynamic_templates[name] = "double";
-          }
-        }
-        ctx._dynamic_templates = dynamic_templates;
-        ctx.remove("_metric_descriptions");
+  - pipeline:
+      name: set_metrics
