ci: disable fail fast on smoke tests
Signed-off-by: Adrien Mannocci <adrien.mannocci@elastic.co>

--- a/.github/workflows/smoke-tests-schedule.yml
+++ b/.github/workflows/smoke-tests-schedule.yml
@@ -28,6 +28,7 @@ jobs:
     name: Run smoke tests OS
     needs: prepare-smoke-tests-os
     strategy:
+      fail-fast: false
       matrix: ${{ fromJSON(needs.prepare-smoke-tests-os.outputs.matrix) }}
     uses: ./.github/workflows/smoke-tests-os.yml
     with:
