--- a/.github/workflows/setup-cluster-env/action.yml
+++ b/.github/workflows/setup-cluster-env/action.yml
@@ -42,6 +42,6 @@ runs:
         echo "${AWS_ACCOUNT_IMPORT}" > ${{ runner.temp }}/account.csv;
         sed -i 's/User name/User Name/g' ${{ runner.temp }}/account.csv;
         aws configure import --csv file://${{ runner.temp }}/account.csv;
-        aws configure set default.region us-east-1;
+        echo 'AWS_ACCOUNT_IMPORT=' >> ${GITHUB_ENV};
         rm -f ${{ runner.temp }}/account.csv;
       shell: 'bash'
