--- a/apmpackage/apm/manifest.yml
+++ b/apmpackage/apm/manifest.yml
@@ -142,7 +142,7 @@ policy_templates:
           - name: tls_supported_protocols
             type: text
             multi: true
-            default: ["TLSv1.1", "TLSv1.2", "TLSv1.3"]
+            default: ["TLSv1.2", "TLSv1.3"]
           - name: tls_cipher_suites
             type: text
             multi: true
